畫面連接&更改顏色

--- a/app/src/main/res/layout/activity_drawgame.xml
+++ b/app/src/main/res/layout/activity_drawgame.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background"
-    tools:context=".FruitgameActivity">
+    tools:context=".DrawgameActivity">
 
     <TextView
         android:id="@+id/textView4"
